--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^29.2.0",
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "axios": "^1.1.2",
     "lodash.debounce": "^4.0.8",
     "normalize.css": "^8.0.1",
@@ -24,6 +29,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
+    "typescript": "^4.8.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
