--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^29.2.0",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/material-ui": "^0.21.12",
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
