change link on main page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.2",
+    "clsx": "^1.2.1",
     "lodash.debounce": "^4.0.8",
     "normalize.css": "^8.0.1",
     "qs": "^6.11.0",
